pkgs/core/test/fixtures/config-parser/invalid/missing-id-empty/.boxfilesrc
{
  "plugins": {
    "": "npm:@boxfiles/provider-copy"
  }
}
